<resources>
    <string name="app_name">DevelopFerJuarez</string>
    <string name="title_petPlus">Pet Plus</string>
    <string name="btnLogin">Loggin</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="ptxtNombre" />
    <string name="ptxtContrasena" />
    <string name="tvMenu">Menu</string>
    <string name="btnMascotas">Ver Mascotas</string>
    <string name="btnVeterinaria">Ver Veterinarias</string>
    <string name="btnAgregarMascota">Agregar Mascotas</string>
    <string name="btnAgregarVeterinaria">Agregar Veterinaria</string>
    <string name="btnAgregarNota">Notas</string>
    <string name="tvAgregarVeterinaria">Agregar Veterinaria</string>
    <string name="txtNombreVeterinaria">Nombre</string>
    <string name="ptNombre" />
    <string name="tvDireccion">Direccion</string>
    <string name="ptDireccion" />
    <string name="btnAgregarVeterinarias">+</string>
    <string name="txtAgregarMascotas">Agregar Mastcotas</string>
    <string name="txtAgregarMascota">Agregar Mascotas</string>
    <string name="txtNombreMascotas">Nombre</string>
    <string name="pt_nombreMascota" />
    <string name="txtRaza">Raza</string>
    <string name="ptNombre_raza" />
    <string name="btnAgregar_mascota">+</string>
    <string name="btnVolver"><![CDATA[<<]]></string>
    <string name="btnVolverVeter"><![CDATA[<<]]></string>
    <string name="btnMostrarListado">Mostrar Listado</string>
    <string name="btnSalir">Salir</string>
</resources>