<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_mascota"
    tools:ignore="ExtraText">


    <EditText

        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ptNombre_raza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/images"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAgregarMascota"
        android:textColor="#EA3413"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="107dp"
    tools:layout_editor_absoluteY="338dp" 
    /





>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombreMascotas"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRaza"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="507dp" />

    <EditText

        android:id="@+id/editTextRaza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ptNombre_raza"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="488dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAgregar_mascota"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="614dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVolver"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="614dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>